--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+bcrypt==3.2.0
+cffi==1.14.3
 click==7.1.2
 Flask==1.1.2
 Flask-JWT-Extended==3.25.0
@@ -5,6 +7,7 @@ freeze==3.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pycparser==2.20
 PyJWT==1.7.1
 pymongo==3.11.0
 six==1.15.0
