--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 bcrypt==3.2.0
+beautifulsoup4==4.9.3
+bs4==0.0.1
+certifi==2020.12.5
 cffi==1.14.3
+chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-JWT-Extended==3.25.0
 freeze==3.0
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 pycparser==2.20
 PyJWT==1.7.1
 pymongo==3.11.0
+requests==2.25.0
 six==1.15.0
+soupsieve==2.1
+urllib3==1.26.2
 Werkzeug==1.0.1
